syntax = "proto3";

option go_package = "proto/server/wenchangnative.proto";
import "google/api/annotations.proto";


package chainservice;

message CreateNftRequest{
  string ClassId = 1;
  string Uri =2;
  string UriHash =3;

}

message CreateNftResponse{
    string Data =1;
}

message ClassByIDRequest{
   string Name=1;
   string TxHash=2;
   string Owner=3;
   string id = 4 ;
}
message ClassByIDResponse{
  string ID=1;
  string Name=2;
  string Uri=3;

}

service CreateNftClass {//服务
  rpc CreateNftClass (CreateNftRequest) returns (CreateNftResponse) {
    option (google.api.http) = {//
      post: "/nft/classes"
      body: "*"
    };
  }
  rpc ClassByID (ClassByIDRequest) returns (ClassByIDResponse) {
    option (google.api.http) = {
      get: "/nft/classes/{id}"//get 方法不应该有请求体
    };
  }
}